--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "mdb-ui-kit": "^6.4.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.17.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
